Fix logo height on large screens, fix add to cart button height on small screens

--- a/src/css/icons.css
+++ b/src/css/icons.css
@@ -40,7 +40,7 @@
 
 @media (--large) {
   :global(.icon--fc-logo) {
-    width: 220px;
-    height: 102px;
+    width: 150px;
+    height: 74px;
   }
 }
