--- a/src/pages/catalog/pdp.css
+++ b/src/pages/catalog/pdp.css
@@ -214,8 +214,9 @@
     font-size: 10px;
   }
 
-  .add-to-cart-btn {
-    height: 32px;
+  .quantity select{
+    height: 44px;
+    font-size: 14px;
   }
 
   .price {
